--- a/src/main/resources/configs/jdbc.properties
+++ b/src/main/resources/configs/jdbc.properties
@@ -1,6 +1,6 @@
 #mysql数据库配置
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/price?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://39.108.56.152:3306/price?characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=Kcwy&+123456
 #druid
@@ -12,4 +12,4 @@ jdbc.testConnection=true
 mapper.plugin = tk.mybatis.mapper.generator.MapperPlugin
 mapper.Mapper = tk.mybatis.mapper.common.Mapper
 # 本机域名
-hostname=http://localhost:8080/
+hostname=http://localhost:8088/
