--- a/src/main/resources/configs/jdbc.properties
+++ b/src/main/resources/configs/jdbc.properties
@@ -1,8 +1,8 @@
 #mysql数据库配置
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://39.108.173.13:3306/price?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://39.108.56.152:3306/price?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=jack.llh.001
+jdbc.password=Kcwy&+123456
 #druid
 jdbc.maxPoolSize=50
 jdbc.minPoolSize=10
@@ -12,4 +12,4 @@ jdbc.testConnection=true
 mapper.plugin = tk.mybatis.mapper.generator.MapperPlugin
 mapper.Mapper = tk.mybatis.mapper.common.Mapper
 # 本机域名
-hostname=http://192.168.1.15:8088/
+hostname=http://localhost:8088/
